syntax = "proto3";

option csharp_namespace = "SharedLib";

service ProductGrpc {
 rpc GetProducts (ProductRequestModel) returns (GetProductResponse);  // Unary Call 
 rpc GetProductsList (VoidPayLoad) returns ( stream GetProductResponse);  // Server Side Streaming 
 rpc GetProductListClientStream (stream ProductRequestModel) returns (GetProductResponse); // Client Side Streaming
 rpc GetProductListDuplexStream (stream ProductRequestModel) returns (stream GetProductResponse); // Client Server Streaming
}

message VoidPayLoad{}
message ProductRequestModel {
 int32 id = 1;
}

message GetProductResponse {
 int32 id = 1;
 string name = 2;
 string description = 3;
 int64 qty = 4;
}